<resources>
    <string name="app_name">Farm Profit Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profit">Profit</string>
    <string name="title_activity_model">Model</string>
    <string name="title_activity_custom">Custom</string>
    <string name="welcome_slogan">Tracking cost infow and outflow is essential for running a profitable business. Farm Profit Calculator is your mobile personal accountant.</string>
    <string name="linkCBOTCorn"><a href="http://www.cmegroup.com/trading/agricultural/grain-and-oilseed/corn.html">Click here to get the up-to-date futures pricing for corn</a></string>
    <string name="linkCBOTSoy"><a href="http://www.cmegroup.com/trading/agricultural/grain-and-oilseed/soybean.html">Click here to get the up-to-date futures pricing for soybean</a></string>
    <string name="welcome_menu_title">Welcome to Farm Profit Calculator!</string>
    <string name="welcome_menu_paragraph1">In order to get to model the crops you need to choose a crop and your region. </string>
    <string name="welcome_menu_paragraph2">1) There is a regional image you can click on to get the specific region at your location. Each state may have multiple regions, be sure to choose the correct region by checking out the USDA map.</string>
    <string name="welcome_menu_paragraph3">2) Click on the crop you\'d like to explore. Then, enter the region which you are located at.</string>
    <string name="welcome_menu_paragraph4">3) You can choose to either enter your own values or go directly to the model (the model will only show regional averages until you set your own)</string>
    <string name="welcome_menu_paragraph5">Also, the USDA banner at the bottom leads to our About page.</string>
    <string name="welcome_menu_paragraph6">Thanks for trying out our app!</string>
    <string name="welcome_region_open">Help with choosing a region</string>
    <string name="welcome_region_close">Close region image</string>
    <string name="custom_set_value">Set Value</string>
    <string name="custom_prev_saved_stats">Edit previous save</string>
    <string name="custom_acres_title">How many Acres do you farm?</string>
    <string name="custom_acres_alert">Click on the number to enter how many acres you farm</string>
    <string name="custom_yield_title">What was your yield? (Bushels per Acre)</string>
    <string name="custom_yield_alert">Click on the number to enter how many acres you farm</string>
    <string name="custom_inputs_title">Enter your input values:</string>
    <string name="custom_input_clarification">The values shown as inputs are initially set as regional averages</string>
    <string name="custom_goto_model">Go to model</string>
    <string name="custom_reformat_values">Re-format Values</string>


</resources>






